k8s/peerAuth.yaml
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: disable-mtls
  namespace: app2
spec:
  mtls:
    mode: DISABLE
