k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spring-boot-app-2
  namespace: app2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: spring-boot-app-2
  template:
    metadata:
      labels:
        app: spring-boot-app-2
    spec:
      containers:
      - name: app
        image: ghcr.io/szabobalazs2003/spring-boot-k8s-2:latest
        ports:
        - containerPort: 8081
      - name: traffic-simulator
        image: curlimages/curl
        command: ["/bin/sh", "-c"]
        args:
          - while true; do
              curl --retry 3 --retry-delay 2 --connect-timeout 5 http://spring-boot-app.default.svc.cluster.local:8080/ping;
              sleep 60;
            done
