k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: spring-boot-app-2
  namespace: app2
spec:
  selector:
    app: spring-boot-app-2
  ports:
    - protocol: TCP
      port: 8081
      targetPort: 8081
